script/Resultados/ArthurUlianaDeAngelo/completo/result_compilation.txt
ArthurUlianaDeAngelo.c: In function ‘main’:
ArthurUlianaDeAngelo.c:28:18: error: invalid initializer
   28 |     char dir[] = argv[2];
      |                  ^~~~
ArthurUlianaDeAngelo.c: In function ‘LeConfigsJogo’:
ArthurUlianaDeAngelo.c:37:1: warning: control reaches end of non-void function [-Wreturn-type]
   37 | }
      | ^
